err/graze-tropopause.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/awacs'...
Listing './lib/python3.5/site-packages/awacs/helpers'...
Listing './lib/python3.5/site-packages/awacs-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/graze_tropopause-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tropopause'...
Compiling './lib/python3.5/site-packages/tropopause/autoscaling.py'...
***   File "./lib/python3.5/site-packages/tropopause/autoscaling.py", line 26
    def
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/troposphere'...
Listing './lib/python3.5/site-packages/troposphere/helpers'...
Listing './lib/python3.5/site-packages/troposphere/openstack'...
Listing './lib/python3.5/site-packages/troposphere-1.9.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
